@@ -248,6 +248,7 @@ fetcher.mac=MAC Address
 fetcher.mac.info=Resolves host's MAC address on the local network using the ARP protocol.\nWill not work for non-local network hosts.
 fetcher.mac.vendor=MAC Vendor
 fetcher.mac.vendor.info=Shows vendor's name that might have produced the network card with the resolved MAC address.
+fetcher.mac.separator=MAC address separator
 fetcher.value.notAvailable=[n/a]
 fetcher.value.notScanned=[n/s]
 unit.ms=\u00A0ms
